Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-29704

qtbase 5.0.1 fails to build on powerpc

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.0.2
    • 5.0.1
    • GUI: Painting
    • None
    • Ubuntu 13.04, PowerPC
    • 39b1bd8f45b9d1e0f2db0cd0d410d64422ffd992

    Description

      qtbase 5.0.1 fails to build on powerpc with the error: expected identifier before numeric constant etc., a snippet from the build log attached. Full build log at https://launchpadlibrarian.net/131243410/buildlog_ubuntu-raring-powerpc.qtbase-opensource-src_5.0.1%2Bdfsg-0ubuntu1_FAILEDTOBUILD.txt.gz

      Attachments

        For Gerrit Dashboard: QTBUG-29704
        # Subject Branch Project Status CR V

        Activity

          People

            srutledg Shawn Rutledge
            timojyrinki Timo Jyrinki
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes