src/gui/painting/qpagedpaintdevice.h
@@ -48,6 +48,9 @@ QT_BEGIN_HEADER
 
 QT_BEGIN_NAMESPACE
 
+#if defined(B0)
+#undef B0 // Terminal hang-up.  We assume that you do not want that.
+#endif
 
 class QPagedPaintDevicePrivate;
 
